# thku_rss

./: LICENSE.txt  README.md  pyproject.toml
example_xml/: TESTING_ONLY_erasmus.xml  TESTING_ONLY_main.xml
thku_rss/: __init__.py  config.json  database.py  fetched_items.db  html_parser.py  main.py
